--- a/src/html_generator/templates/seo_analysis.html
+++ b/src/html_generator/templates/seo_analysis.html
@@ -76,7 +76,7 @@
             </div>
             <i class="fas fa-chevron-down toggle-icon"></i>
         </div>
-        <div class="phase-content" style="display: none;">
+        <div class="phase-content">
             <!-- Page Details -->
             <div style="margin-bottom: 1.5rem;">
                 <h4 style="color: #2d3748; margin-bottom: 0.5rem;">Page Information</h4>
