--- a/src/html_generator/templates/qa_tests.html
+++ b/src/html_generator/templates/qa_tests.html
@@ -123,7 +123,7 @@ function createTestFileElement(testFile, index) {
         <div class="phase-header" onclick="toggleSection(this)">
             <div class="phase-title">
                 <i class="fas fa-file-code"></i> 
-                ${testFile.assertion_count} assertions
+                ${testFile.title} (${testFile.assertion_count} assertions)
             </div>
             <i class="fas fa-chevron-down toggle-icon"></i>
         </div>
