Add post message handler

--- a/src/html_generator/templates/base.html
+++ b/src/html_generator/templates/base.html
@@ -59,6 +59,11 @@
 
     {% block extra_js %}{% endblock %}
     
+    <!-- Domain Change Tracking Script -->
+    <script>
+        {{ domain_tracker_js }}
+    </script>
+    
     <script>
         // Basic JavaScript for interactivity
         function showTab(tabName, element) {
